deployment/k8s/control-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: control-service
  labels:
    app: control-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: control-service
  template:
    metadata:
      labels:
        app: control-service
    spec:
      containers:
      - name: control-service
        image: localhost:5000/control-service
