deployment/k8s/handle-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: private-reg-container
    image: europe-west3-docker.pkg.dev/agora-jegyrendszer/jegyrendszer/email-server:1.2
  imagePullSecrets:
  - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
spec:
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: test
        image: europe-west3-docker.pkg.dev/agora-jegyrendszer/jegyrendszer/email-server:1.2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
