deployment/k8s/handle-test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: handle-server-deployment
  labels:
    app: handle-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: handle-server
  template:
    metadata:
      labels:
        app: handle-server
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: handle-server
        image: europe-west3-docker.pkg.dev/agora-jegyrendszer/jegyrendszer/handle-server:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 1Gi
        ports:
        - containerPort: 3001
          name: backend-open
