deployment/k8s/storage-controller-gke.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-server-deployment
  labels:
    app: nfs-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nfs-server
  template:
    metadata:
      labels:
        app: nfs-server
    spec:
      containers:
      - name: nfs-server
        image: gcr.io/google_containers/volume-nfs:0.8
        ports:
          - name: nfs
            containerPort: 2049
          - name: mountd
            containerPort: 20048
          - name: rpcbind
            containerPort: 111
        securityContext:
          privileged: true
          # allowPrivilegeEscalation: false
          # runAsUser: 0
        volumeMounts:
          - mountPath: /data
            name: nfs-pvclaim
        resources:
          limits:
            cpu: 250m
            memory: 2Gi
          requests:
            cpu: 250m
            memory: 1Gi
      volumes:
        - name: nfs-pvclaim
          persistentVolumeClaim:
            claimName: nfs-pvc
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nfs-svc
# spec:
#   selector:
#     app: nfs-server
#   ports:
#     - name: nfs
#       port: 2049
#     - name: mountd
#       port: 20048
#     - name: rpcbind
#       port: 111
# ---
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: nfs-pv
# spec:
#   capacity:
#     storage: 15Gi
#   accessModes:
#     - ReadWriteMany
#   nfs:
#     server: nfs-svc.default.svc.cluster.local
#     path: "/"
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: backend-nfs-share
# spec:
#   accessModes:
#     - ReadWriteMany
#   storageClassName: ""
#   resources:
#     requests:
#       storage: 15Gi
