deployment/k8s/email-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-server
  labels:
    app: email-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: email-server
  template:
    metadata:
      labels:
        app: email-server
    spec:
      volumes:
      - name: tickets_folder
        persistentVolumeClaim:
        claimName: handle-server-pvc-tickets
      containers:
      - name: email-server
        image: nginx
        ports:
        - containerPort: 5000
      volumeMounts:
      - name: tickets_folder
        mountPath: /tickets
---
apiVersion: v1
kind: Service
metadata:
  name: email-server-service
spec:
  selector:
    app: email-server
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
