deployment/k8s/handle-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: handle-server-deployment
  labels:
    app: handle-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: handle-server
  template:
    metadata:
      labels:
        app: handle-server
    spec:
      volumes:
      - name: handle-server-volume
        persistentVolumeClaim:
          claimName: backend-uploads-pvc
      containers:
      - name: handle-server
        image: nginx
        resources:
        ports:
        - containerPort: 3001
          name: backend-open
        volumeMounts:
        - name: handle-server-volume
          mountPath: /uploads
---
apiVersion: v1
kind: Service
metadata:
  name: handle-server-service
spec:
  selector:
    app: handle-server
  ports:
  - protocol: TCP
    port: 3000
    targetPort: backend-open
