deployment/k8s/uptime-kuma-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  containers:
  - name: uptime-kuma
    image: louislam/uptime-kuma:1.11.4
    ports:
    - name: uptime-kuma-port
      containerPort: 3001
      protocol: TCP
    volumeMounts:
    - mountPath: /app/data
      name: mypvc
  volumes:
  - name: mypvc
    persistentVolumeClaim:
      claimName: uptime-kuma-pvc
      readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-service
spec:
  type: NodePort
  selector:
    app: uptime-kuma
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
    nodePort: 30002
