deployment/k8s/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: web-server-np
spec:
    podSelector:
        matchLabels:
            app: web-server
    policyTypes:
        - Egress
    egress:
    - to: 
        - ipBlock: 
            cidr: 10.0.0.0/24
    ports:
    -   protocol: TCP
        port: 8080
